.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/arg_enum_proc_macro-0.3.4/tests/ui/derive-not-on-enum.stderr
error: proc-macro derive panicked
 --> $DIR/derive-not-on-enum.rs:3:10
  |
3 | #[derive(ArgEnum)]
  |          ^^^^^^^
  |
  = help: message: Only enum supported
