.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/arg_enum_proc_macro-0.3.4/tests/ui/derive-not-on-enum.rs
use arg_enum_proc_macro::ArgEnum;

#[derive(ArgEnum)]
pub struct Complicated {
    pub foo: u8,
    pub bar: u8,
}

fn main() {}
